# games

./: .gitignore  CMakeLists.txt
bobj/: CMakeLists.txt
bobj/include/: bobj.h
bobj/include/bobj/: bool.h  fmt.h  fn.h  int.h  iter.h  list.h  ops.h  str.h
bobj/include/bobj/log/: log.h
bobj/src/: bobj.c  bobj.h
bobj/src/bobj/: array.h  bint.c  bint.h  bool.c  fmt.c  fn.c  fn.h  int.c  int.h  iter.c  iter.h  list.c  list.h  ops.c  ops.h  str.c  str.h
bobj/src/bobj/io/: write.c  write.h
bobj/src/bobj/iter/: map.c  map.h
bobj/src/bobj/log/: log.c  log.h
games/: CMakeLists.txt
games/src/: chess.c  engine.c  engine.h  games.h  main.c  mines.c
games/src/chess/: chess.h  movegen.c
games/src/term/: ansi.c  term.h  ui.h
src/: engine.c  engine.h  games.h  main.c  mines.c
